force-app/main/default/objects/DFSI_Case_Status_Mapping_SNSW__mdt/DFSI_Case_Status_Mapping_SNSW__mdt.object-meta.xml
<CustomObject>
    <label>DFSI Case Status Mapping SNSW</label>
    <pluralLabel>DFSI Case Status Mapping SNSW</pluralLabel>
</CustomObject>