force-app/main/default/objects/DFSI_Case_Status_Mapping_SNSW__mdt/fields/CFS_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>CFS_Case_Status__c</fullName>
    <label>CFS Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advice Received</fullName>
            </value>
            <value>
                <fullName>Awaiting Advice</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Closed with customer</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>