force-app/main/default/objects/DFSI_Case_Status_Mapping_SNSW__mdt/fields/CFS_Partner_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>CFS_Partner_Case_Status__c</fullName>
    <label>CFS Partner Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>