force-app/main/default/objects/DFSI_Case_Status_Mapping_SNSW__mdt/fields/DFSI_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>DFSI_Case_Status__c</fullName>
    <label>DFSI Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
                <default>true</default>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Citizen Reply</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>