force-app/main/default/objects/DFSI_Case_Status_Mapping_SNSW__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CFS_Case_Status__c</columns>
    <columns>CFS_Partner_Case_Status__c</columns>
    <columns>DFSI_Case_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>